--- a/src/Banner.css
+++ b/src/Banner.css
@@ -1,6 +1,6 @@
 .banner {
     position: relative;
-    height: 448px;
+    height: 600px;
     object-fit: contain;
     color: #fff;
 }
@@ -8,22 +8,23 @@
 .banner__container {
     margin-left: 30px;
     padding-top: 140px;
-    height: 190px;
+    height: 342px;
 }
 
 .banner__title {
     font-size: 3rem;
     font-weight: 800;
-    padding-bottom: 0.3rem;
+    padding-bottom: 1rem;
 }
 
 .banner__description {
     width: 45rem;
-    line-height: 1.3;
-    padding-top: 1rem;
+    line-height: 2;
+    padding-top: 2rem;
     font-size: 0.8rem;
     max-width: 360px;
     height: 80px;
+    letter-spacing: 1px;
 }
 
 .banner--fadeBottom {
