--- a/src/Nav.css
+++ b/src/Nav.css
@@ -4,7 +4,7 @@
     padding: 20px;
     width: 100%;
     height: 30px;
-    z-index: 1;
+    z-index: 999;
 
     /* Animations */
     transition-timing-function: ease-in;
@@ -13,7 +13,9 @@
 
 .nav__container {
     display: flex;
+    width: 95%;
     justify-content: space-between;
+    color: #fff;
 }
 
 .nav__black {
@@ -21,19 +23,44 @@
 }
 
 .nav__logo {
-    position: fixed;
-    top: 10px;
-    left: 0;
     width: 80px;
     object-fit: contain;
     padding-left: 20px;
     cursor: pointer;
+    margin-right: 50px;
 }
 
 .nav__avatar {
-    position: fixed;
-    right: 20px;
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     cursor: pointer;
+}
+
+.nav__optionsLeft {
+    display: flex;
+    align-items: center;
+}
+
+.nav__optionsLeft > p {
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.nav__optionsLeft > p:hover {
+    opacity: 0.8;
+}
+
+.nav__optionsRight {
+    display: flex;
+    align-items: center;
+}
+
+.nav__optionsRight > .MuiSvgIcon-root {
+    margin-right: 25px;
+    cursor: pointer;
+    font-size: 28px;
+}
+
+.nav__optionsRight > .MuiSvgIcon-root:hover {
+    opacity: 0.8;
 }
