--- a/src/Row.css
+++ b/src/Row.css
@@ -1,5 +1,75 @@
 .row {
     color: #fff;
+    margin-left: 30px;
+}
+
+.row__posters {
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+}
+
+.row__posters::-webkit-scrollbar {
+    display: none;
+}
+
+.row__poster {
+    flex-shrink: 0;
+    width: 200px;
+    max-height: 100px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.row__posterLarge {
+    max-height: 250px;
+    cursor: pointer;
+}
+
+.row__posterContainer {
+    height: 100%;
+    width: 100%;
+    transition: transform 450ms;
+    position: relative;
+    z-index: 1;
+}
+
+.row__posterTitle {
+    display: none;
+    width: 95.5%;
+    padding: 10px 0px;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.3);
+    box-sizing: border-box;
+}
+
+.row__posterTitle > p {
+    margin-left: 10px;
+    font-size: 12px;
+    width: 90%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.row__posterContainer:hover .row__posterTitle {
+    display: block;
+}
+
+.row__posterContainer:hover {
+    transform: scale(1.2);
+    z-index: 5;
+}
+.row__posterPhoto {
+    width: 100%;
+    height: 100%;
+}
+
+/**********************************************************************/
+/*.row {
+    color: #fff;
     margin-left: 20px;
 }
 
@@ -20,18 +90,26 @@
     margin-right: 10px;
     width: 100%;
     transition: transform 450ms;
+    cursor: pointer;
 }
 
 .row__poster:hover {
-    transform: scale(1.08);
+    transform: scale(1.2);
     opacity: 1;
 }
 
 .row__posterLarge {
     max-height: 250px;
+    cursor: pointer;
 }
 
 .row__posterLarge:hover {
-    transform: scale(1.09);
+    transform: scale(1.2);
     opacity: 1;
-}
+}*/
+/*******************************************************************/
+
+
+
+
+
